non-msrv-tests/tests/ui/item.stderr
error: empty `derive_where` found
 --> tests/ui/item.rs:5:1
  |
5 | #[derive_where]
  | ^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `derive_where` (in Nightly builds, run with -Z macro-backtrace for more info)

error: empty `derive_where` found
 --> tests/ui/item.rs:8:1
  |
8 | #[derive_where()]
  | ^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `derive_where` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected `,`
  --> tests/ui/item.rs:11:24
   |
11 | #[derive_where(Clone; T;)]
   |                        ^

error: expected type to bind to, expected one of: `for`, parentheses, `fn`, `unsafe`, `extern`, identifier, `::`, `<`, square brackets, `*`, `&`, `!`, `impl`, `_`, lifetime
  --> tests/ui/item.rs:14:25
   |
14 | #[derive_where(Clone; T,,)]
   |                         ^

error: expected type to bind to, expected one of: `for`, parentheses, `fn`, `unsafe`, `extern`, identifier, `::`, `<`, square brackets, `*`, `&`, `!`, `impl`, `_`, lifetime
  --> tests/ui/item.rs:17:23
   |
17 | #[derive_where(Clone; where)]
   |                       ^^^^^

error: expected `;` or `,
  --> tests/ui/item.rs:20:22
   |
20 | #[derive_where(Clone Debug)]
   |                      ^^^^^

error: expected `,`
  --> tests/ui/item.rs:23:25
   |
23 | #[derive_where(Clone; T U)]
   |                         ^

error: unexpected option syntax
  --> tests/ui/item.rs:26:16
   |
26 | #[derive_where("Clone")]
   |                ^^^^^^^

warning: unused import: `std::marker::PhantomData`
 --> tests/ui/item.rs:1:5
  |
1 | use std::marker::PhantomData;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
